# phosphor-hostlogger

./: MAINTAINERS  Makefile.am  OWNERS  README.md  configure.ac  default.conf  default_stream.conf  groups  hostlogger.dreport  hostlogger.dreport.in  hostlogger.service.in  hostlogger@.service  hostlogger_stream@.service  meson.build  meson.options  meson_options.txt  project.config
integration/: dreport.plugin  systemd.service
src/: buffer_service.cpp  buffer_service.hpp  config.cpp  config.hpp  dbus_loop.hpp  dbus_server.cpp  dbus_server.hpp  dbus_watch.cpp  dbus_watch.hpp  file_storage.cpp  file_storage.hpp  host_console.cpp  host_console.hpp  log_buffer.cpp  log_buffer.hpp  log_file.cpp  log_file.hpp  log_manager.cpp  log_manager.hpp  log_storage.cpp  log_storage.hpp  main.cpp  service.cpp  service.hpp  stream_main.cpp  stream_service.cpp  stream_service.hpp  zlib_exception.cpp  zlib_exception.hpp  zlib_file.cpp
test/: buffer_service_test.cpp  config_test.cpp  dbus_loop_mock.hpp  file_storage_mock.hpp  file_storage_test.cpp  host_console_mock.hpp  host_console_test.cpp  log_buffer_mock.hpp  log_buffer_test.cpp  meson.build  service_test.cpp  stream_service_test.cpp  zlib_file_test.cpp
xyz/openbmc_project/: HostLogger.interface.yaml
